--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,27 @@
-<p>login works!</p>
+<div class="relative min-h-screen flex items-center justify-center bg-cover bg-center"
+     style="background-image: url('/assets/imgs/movies-background.png');">
+  <div class="absolute inset-0 bg-black/30"></div>
+
+  <div class="relative z-10 bg-white/80 backdrop-blur-lg shadow-lg rounded-lg p-8 w-full max-w-md">
+    <h2 class="text-2xl font-bold text-gray-800 text-center">Iniciar Sesión</h2>
+
+    <form (submit)="onLogin()" class="mt-6 space-y-4">
+        <div>
+          <label for="email" class="block text-sm font-medium text-gray-700">Correo Electrónico</label>
+          <input type="email" id="email" name="email" [(ngModel)]="email" class="mt-1 block w-full px-4 py-2 border rounded-lg shadow-sm focus:ring focus:ring-indigo-300 focus:outline-none" placeholder="correo@ejemplo.com">
+        </div>
+      
+        <div>
+          <label for="password" class="block text-sm font-medium text-gray-700">Contraseña</label>
+          <input type="password" id="password" name="password" [(ngModel)]="password" class="mt-1 block w-full px-4 py-2 border rounded-lg shadow-sm focus:ring focus:ring-indigo-300 focus:outline-none" placeholder="********">
+        </div>
+      
+        <p class="text-red-500 text-sm" *ngIf="errorMessage">{{ errorMessage }}</p>
+      
+        <button type="submit" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white py-2 px-4 rounded-lg font-semibold transition">
+          Ingresar
+        </button>
+      </form>
+      
+  </div>
+</div>
