--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<div class="min-h-screen bg-light text-textLight dark:bg-dark dark:text-textDark transition-colors duration-300">
+    <app-navbar *ngIf="showNavbar"></app-navbar>
+    <router-outlet></router-outlet>
+  </div>
+  
