--- a/src/app/pages/movie-detail/movie-detail.component.html
+++ b/src/app/pages/movie-detail/movie-detail.component.html
@@ -64,6 +64,27 @@
             <h3 class="text-xl font-semibold text-indigo-400">🗣️ Idiomas</h3>
             <p class="text-gray-300">{{ getSpokenLanguages() }}</p>
           </div>
+
+        <!-- Sección de Equipo de Producción -->
+
+        <div class="bg-slate-600 p-4 rounded-lg">
+            <div class="relative z-10 max-w-6xl mx-auto ">
+                <h3 class="text-2xl font-bold text-indigo-400">🎬 Equipo de Producción</h3>
+            
+                <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mt-4">
+                <div *ngFor="let member of crew" >
+                    <img *ngIf="member.profile_path"
+                            [src]="'https://image.tmdb.org/t/p/w200' + member.profile_path"
+                            [alt]="member.name"
+                            class="rounded-lg shadow-lg w-36 h-52 object-cover">
+                    <p class="text-lg font-semibold text-white">{{ member.name }}</p>
+                    <p class="text-sm text-gray-400 italic">{{ member.job }}</p>
+                </div>
+                </div>
+            </div>
+        </div>
+        
+  
   
         <!-- Enlace a IMDb -->
         <a *ngIf="movie.imdb_id" [href]="'https://www.imdb.com/title/' + movie.imdb_id" target="_blank"
@@ -78,7 +99,7 @@
     <div class="relative z-10 flex flex-col md:flex-row items-center md:items-start gap-8 max-w-6xl mx-auto py-10">
         <!-- Sección de Reparto (Cast) -->
         <div class="bg-slate-600 p-4 rounded-lg">
-            <div class="relative z-10 max-w-6xl mx-auto ">
+            <div class="relative z-10 max-w-6xl mx-auto">
                 <h3 class="text-2xl font-bold text-indigo-400">🎭 Reparto</h3>
             
                 <!-- Carrusel de Actores -->
@@ -99,7 +120,6 @@
             </div>
         </div>
     </div>
-    
   </div>
 
   
