--- a/src/app/pages/movies-top-rated/movies-top-rated.component.html
+++ b/src/app/pages/movies-top-rated/movies-top-rated.component.html
@@ -10,7 +10,7 @@
     </div>
   
     <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-6 mt-6">
-      <app-movie-card *ngFor="let movie of topRatedMovies" [movie]="movie"></app-movie-card>
+      <app-movie-card *ngFor="let movie of topRatedMovies" [movie]="movie" (movieClicked)="onMovieSelected($event)"></app-movie-card>
     </div>
 
     <div *ngIf="isLoading" class="flex justify-center mt-6">
